feat: add pagination for notification controller and add swagger
