# routes/index.js
@@ -3,6 +3,7 @@ const userRouter = require('./user');
 const commentRouter = require('./comment');
 const postRouter = require('./post');
 const movieRouter = require('./movie');
+const notificationRouter = require('./notification');
 
 const v1Router = express.Router();
 
@@ -10,5 +11,6 @@ v1Router.use('/users', userRouter);
 v1Router.use('/comments', commentRouter);
 v1Router.use('/posts', postRouter);
 v1Router.use('/movies', movieRouter);
+v1Router.use('/notifications', notificationRouter);
 
 module.exports = v1Router;
