# routes/notification.js
@@ -1,11 +1,11 @@
 const { Router } = require('express');
 const auth = require('../middleware/auth');
-const { getUnreadNotifications, readNotifications } = require('../controllers/notification');
+const { getNotifications, readNotifications } = require('../controllers/notification');
 
 const notificationRouter = Router();
 notificationRouter.use(auth);
 
-notificationRouter.get('/', getUnreadNotifications);
+notificationRouter.get('/', getNotifications);
 notificationRouter.put('/', readNotifications);
 
 module.exports = notificationRouter;
